新增動畫效果

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -25,3 +25,17 @@ sim-time-limit = 20s
 *.host*.wlan[0].mac.headerLength = 23B
 
 *.host*.**.bitrate = 1Mbps
+
+
+[Config Wireless02]
+description = Setting up some animations
+extends = Wireless01
+
+*.hostA.wlan[0].radio.displayCommunicationRange = true
+
+*.visualizer.sceneVisualizer.descriptionFigure = "title"
+
+*.visualizer.mediumVisualizer.displaySignals = true
+
+*.visualizer.physicalLinkVisualizer.displayLinks = true
+*.visualizer.physicalLinkVisualizer.packetFilter = "UDPData*"
