--- a/simulations/.qtenvrc
+++ b/simulations/.qtenvrc
@@ -9,3 +9,7 @@ fast-min-playback-speed=1
 fast-max-playback-speed=1e+06
 fast-min-animation-speed=nan
 fast-max-animation-speed=nan
+
+[General]
+last-configname=Wireless02
+last-runnumber=0
